Fix misalignment of multi-select labels inside split-group field-groups.

--- a/less/v2/forms.less
+++ b/less/v2/forms.less
@@ -335,6 +335,7 @@
       &.field-groups {
         flex-direction: column;
         align-items: stretch;
+        flex-wrap: nowrap;
       }
 
       .field-group {
